# CodeFlow-CLI

./: .gitignore  CodeFlowNinjaHandbook.md  INSTALL.md  LICENSE  README.md  example_file_analysis.py  pyproject.toml  requirements.txt  setup.py  test_bug_fix.py  test_cli_working.py  test_confirmation_system.py  test_diff_functionality.py  test_enhanced_agent.py  test_enhanced_ui.py  test_intelligent_agent.py  test_preview_fix.py
groq_agent/: __init__.py  agentic_chat.py  agentic_system.py  api_client.py  chat_session.py  cli.py  config.py  diff_manager.py  enhanced_chat.py  file_operations.py  handbook_manager.py  intelligent_agent.py  model_selector.py  recursive_agent.py
tests/: __init__.py  test_agentic_chat.py  test_config.py  test_file_operations.py
