[build-system]
requires = ["setuptools==68.2.2", "wheel<0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "codeflow-cli"
version="0.1.5"
description = "Advanced AI coding assistant with Cursor AI-style agentic capabilities, semantic search, and intelligent code operations"
authors = [{name = "TM NABEEL", email = "tmnabeel30@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
keywords = [
    "ai", "coding", "assistant", "cursor", "agentic", "semantic-search", 
    "code-analysis", "terminal", "cli", "groq", "llm", "developer-tools"
]
dependencies = [
    "groq>=0.4.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
groq-agent = "groq_agent.cli:main"
codeflow = "groq_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
